feat: yapi run enhancements and store assets

--- a/popup.html
+++ b/popup.html
@@ -195,18 +195,18 @@
         <h3 class="section-title">扩展状态</h3>
         <div class="info-box">
           <h4>功能简介</h4>
-          <p>扩展已启用，支持跨域请求并在页面上实时显示 cURL 命令。发送请求后，请查看页面右上角的弹窗。</p>
+          <p>扩展已启用，支持跨域请求并在页面上生成 cURL 命令；在 YApi「运行」页会以内嵌面板展示，便于复制与分享。</p>
         </div>
       </div>
 
       <div class="section">
-        <h3 class="section-title">cURL 弹窗设置</h3>
+        <h3 class="section-title">快捷入口</h3>
         <div class="setting-item">
           <div>
-            <div class="setting-label">cURL 命令弹窗</div>
-            <div class="setting-desc">控制页面上 cURL 命令弹窗的显示</div>
+            <div class="setting-label">问题反馈</div>
+            <div class="setting-desc">遇到问题？点击直达 GitHub Issues</div>
           </div>
-          <button id="enable-curl-btn" class="btn btn-success">启用弹窗</button>
+          <button id="open-issues-btn" class="btn btn-primary">打开</button>
         </div>
       </div>
       
